# pure_python

./: .gitignore  100challenge.py  README.md  app_msgs.py  blog_scraper.py  blog_scraper_v2.py  calculator.py  file_analizer.py  file_analizer_v2.py  file_analyzer.py  filmweb_scraper.py  fw_scraper.py  olx_scraper.py  olx_scraper_v2.py  outlook_robot.py  prime_numbers.py  pyproject.toml  robot_v1.py  some_practice.py  task-2.py  task_organizer.py  test.py  test.txt  tv_scraper.py  year.py
apps_messages/: analizer_v1_msgs.py  analizer_v2_msgs.py  analyzer_msgs.py  calculator_msgs.py  organizer_msgs.py
other/: 100challenge.py
other/unittests_practice/: test_count_file.py  test_file.py  test_file_pt.py
regex_practice/: regex_practice.py
tests/: test_blog_scraper.py  test_filmweb_scraper.py  test_task_organizer.py  test_tv_scraper.py
unittests_practice/: count_file.py  file.py  test_count_file.py  test_file.py  test_file_pt.py
