[tool.poetry]
name = "pyproject"
version = "0.1.0"
description = ""
authors = ["wszoltysek <szoltysek.w@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
bs4 = "^0.0.1"
lxml = "^4.5.2"
selenium = "^3.141.0"
webdriver_manager = "^3.2.2"
webdriver-manager = "^3.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
